<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium"
    android:background="@color/colorBackground"
    tools:context="com.otgindonesia.soregist.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="@dimen/text_large"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_large_med"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_instruction"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_small_med"/>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_gravity="center"
            android:textColor="@color/colorSecondaryText"
            android:background="@drawable/primary_button"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Version"
        android:textSize="@dimen/text_small"
        android:textColor="@color/colorHint"
        />

</LinearLayout>
