<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:background="@color/colorBackground"
    tools:context="com.otgindonesia.soregist.RegistrationDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:weightSum="5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/upline_name"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/et_upline_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="e.g. Ronny dan Lanny"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_small"
                    android:layout_weight="3"/>

                <!--<EditText-->
                    <!--android:id="@+id/et_upline_name"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:editable="false"-->
                    <!--android:hint="e.g. Ronny dan Lanny"-->
                    <!--android:textColor="@color/colorHint"-->
                    <!--android:textSize="@dimen/text_medium" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registered_name"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/et_registered_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="e.g. John Doe"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_small"
                    android:layout_weight="3"/>

                <!--<EditText-->
                    <!--android:id="@+id/et_registered_name"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:editable="false"-->
                    <!--android:hint="e.g. John Doe"-->
                    <!--android:textColor="@color/colorHint"-->
                    <!--android:textSize="@dimen/text_medium" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/text_small"
                    android:layout_weight="2"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="e.g. John Doe"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_small"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/text_medium"-->
                <!--android:text="@string/take_a_photo"/>-->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <ImageView
                        android:id="@+id/iv_profile_picture"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_picture" />

                </FrameLayout>

                <Button
                    android:id="@+id/btn_takePhoto"
                    android:background="@drawable/secondary_button"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/take_a_photo" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryText"
                        android:background="@drawable/secondary_button"
                        android:text="@string/cancel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/colorSecondaryText"
                        android:background="@drawable/primary_button"
                        android:layout_gravity="center"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
